[FIX]: skills alignement issue

--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -11,7 +11,7 @@
     align-items: flex-start;
 
     @media screen and (max-width: 900px) {
-      width: 100%;
+      // width: 100%;
       flex-direction: column;
     }
 
@@ -174,4 +174,5 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    width: 30vw; 
   }
